Query and Endpoint services impl.